# Helix

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  test.yml
api/cli/: cli.py
api/grpc/: server.py
api/rest/: __init__.py
core/config/: config.py
core/errors/: errors.py
core/events/: bus.py
core/observability/: health.py  metrics.py  tracing.py
core/policy/: policy.py  rbac.py
core/security/: injection_defense.py  signing.py  vault.py
core/survival/: tiers.py
core/types/: automaton.py  automaton.ts  identifiers.py  ids.ts  money.py  money.ts
core/utils/: ratelimit.py  structured_logging.py
docs/api/: README.md
docs/architecture/: 00-summary.md  01-overview.md  02-runtime-loop.md  03-memory.md  04-financial-model.md  05-replication.md  06-survival-and-defense.md  07-helix-treasury.md  08-x402-payments.md  09-inbox-messaging.md  10-conversation-history.md  11-bootstrap.md  12-plan-mode.md  13-heartbeat.md  14-soul.md  15-self-modification.md  16-dashboard.md  17-e2e-proof.md  18-safety-rails.md  19-state-of-platform.md
docs/diagrams/: architecture.puml  replication.puml  runtime-loop.puml
docs/operations/: runbook.md
docs/security/: threat-model.md
infra/ci/: pipeline.yaml
infra/docker/: Dockerfile  docker-compose.yml  prometheus.yml
infra/helm/: Chart.yaml  values.yaml
infra/k8s/: control-plane.yaml  postgres.yaml  worker.yaml
scripts/: chat.py  dashboard_demo.py  inbox_demo.py  smoke.py  x402_demo.py
tests/: conftest.py
web/: test-openrouter.html
(+119 files in other folders)
