[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-platform"
version = "0.1.0"
description = "Self-funding, self-modifying autonomous agent platform."
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
readme = "README.md"
dependencies = []

[tool.setuptools]
packages = [
    "core",
    "runtime",
    "services",
    "api",
]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
